[gd_scene load_steps=5 format=3 uid="uid://b44cnp22f7gby"]

[ext_resource type="Script" path="res://Scripts/Character.gd" id="1_8hwsy"]
[ext_resource type="Texture2D" uid="uid://cxtjm6nmv7kkx" path="res://Sprites/Simboll.png" id="2_8f5kp"]
[ext_resource type="Texture2D" uid="uid://c81f7v5qceyhe" path="res://Sprites/Jester.png" id="2_c10i7"]
[ext_resource type="Texture2D" uid="uid://bawovq3wre8ce" path="res://Sprites/Benny.png" id="4_2q5xl"]

[node name="Char" type="Node2D"]
script = ExtResource("1_8hwsy")
hability = 1
hability_description = "Doubles next unity's stats"

[node name="CharSC" type="Node2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(5, 5)
texture = ExtResource("2_c10i7")

[node name="g_label" type="Label" parent="."]
modulate = Color(0, 0.411765, 0.2, 1)
offset_left = 9.0
offset_top = 41.0
offset_right = 59.0
offset_bottom = 64.0
text = "xxxxx"

[node name="Simboll" type="Sprite2D" parent="g_label"]
position = Vector2(-13, 13)
scale = Vector2(2, 2)
texture = ExtResource("2_8f5kp")

[node name="r_label" type="Label" parent="."]
modulate = Color(0.647059, 0.0392157, 0, 1)
offset_left = 9.0
offset_top = 61.0
offset_right = 59.0
offset_bottom = 84.0
text = "xxxxx"

[node name="Simboll" type="Sprite2D" parent="r_label"]
position = Vector2(-13, 13)
scale = Vector2(2, 2)
texture = ExtResource("2_8f5kp")

[node name="b_label" type="Label" parent="."]
modulate = Color(0, 0.364706, 0.541176, 1)
offset_left = 9.0
offset_top = 80.0
offset_right = 59.0
offset_bottom = 103.0
text = "xxxxx"

[node name="Simboll" type="Sprite2D" parent="b_label"]
position = Vector2(-13, 13)
scale = Vector2(2, 2)
texture = ExtResource("2_8f5kp")

[node name="is_turn" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0.768627, 0.223529, 1)
position = Vector2(0, -69)
scale = Vector2(2, 2)
texture = ExtResource("2_8f5kp")

[node name="Head" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_2q5xl")
